bluec-tests/tests/valid/typedef/redeclare_same_underlying.c
int main(void) {
    typedef int foo;
    typedef int MyInt;
    typedef MyInt foo;
    foo x = 3;
    return x;
}
