bluec-tests/tests/invalid/types_short/conflicting_global_types.c
int foo = 3;

/* It's illegal to declare the same variable
 * with different types
 */
short foo;

int main(void) {
    return foo;
}